src/objects/Sharepoint_File__c.object
<CustomObject>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>CLM-MC-CLMCMA-3661 - To Store File Name</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Url__c</fullName>
        <label>File Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Sharepoint File</label>
    <nameField>
        <label>Sharepoint Files Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharepoint Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>